--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["bouncer"]
+members = ["bouncer", "bouncer-config"]
 resolver = "2"
 
 [workspace.package]
@@ -8,6 +8,11 @@ license = "GPL-3.0"
 publish = false
 edition = "2021"
 rust-version = "1.82.0"
+
+[workspace.dependencies]
+anyhow = "1.0.92"
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 
 [profile.release]
 lto = "thin"
