--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["bouncer-bin", "bouncer-cli", "bouncer-config"]
+members = ["bouncer-bin", "bouncer-bot", "bouncer-cli", "bouncer-config"]
 resolver = "2"
 
 [workspace.package]
@@ -11,9 +11,16 @@ rust-version = "1.82.0"
 
 [workspace.dependencies]
 anyhow = "1.0.92"
+async-trait = "0.1.83"
+secrecy = { version = "0.10.3" }
 thiserror = "1.0.67"
+tokio = "1.41.0"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
+twilight-cache-inmemory = "0.16.0-rc.1"
+twilight-gateway = "0.16.0-rc.1"
+twilight-http = "0.16.0-rc.1"
+twilight-model = "0.16.0-rc.1"
 
 [profile.release]
 lto = "thin"
