--- a/bouncer-config/Cargo.toml
+++ b/bouncer-config/Cargo.toml
@@ -9,7 +9,7 @@ rust-version.workspace = true
 [dependencies]
 anyhow.workspace = true
 figment = { version = "0.10.19", features = ["env", "yaml"] }
-secrecy = { version = "0.10.3", features = ["serde"] }
+secrecy = { workspace = true, features = ["serde"] }
 serde = { version = "1.0.214", features = ["derive"] }
 thiserror.workspace = true
 
