--- a/bouncer-bot/Cargo.toml
+++ b/bouncer-bot/Cargo.toml
@@ -12,6 +12,7 @@ async-trait.workspace = true
 paste = "1.0.15"
 secrecy.workspace = true
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
+tracing.workspace = true
 twilight-cache-inmemory.workspace = true
 twilight-gateway.workspace = true
 twilight-http.workspace = true
