--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["bouncer-bin", "bouncer-bot", "bouncer-cli", "bouncer-config"]
+members = ["bouncer", "bouncer-bot", "bouncer-cli", "bouncer-config"]
 resolver = "2"
 
 [workspace.package]
