--- a/bouncer-framework/Cargo.toml
+++ b/bouncer-framework/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "bouncer-bot"
+name = "bouncer-framework"
 version.workspace = true
 license.workspace = true
 publish.workspace = true
