--- a/bouncer-macros/Cargo.toml
+++ b/bouncer-macros/Cargo.toml
@@ -10,7 +10,8 @@ rust-version.workspace = true
 proc-macro = true
 
 [dependencies]
+itertools = "0.13.0"
 proc-macro2 = "1.0.92"
-quote = "1.0.38"
 syn = { version = "2.0.91", features = ["parsing"] }
 twilight-validate = "0.16.0-rc.1"
+quote = "1.0.38"
