--- a/bouncer/Cargo.toml
+++ b/bouncer/Cargo.toml
@@ -14,6 +14,7 @@ bouncer-macros = { path = "../bouncer-macros" }
 
 anyhow.workspace = true
 async-trait.workspace = true
+thiserror.workspace = true
 tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
 tracing.workspace = true
 tracing-subscriber.workspace = true
