Cargo fmt, use `builder` feature of `twilight-util` on `bouncer` package

--- a/bouncer/Cargo.toml
+++ b/bouncer/Cargo.toml
@@ -22,4 +22,4 @@ twilight-cache-inmemory.workspace = true
 twilight-gateway.workspace = true
 twilight-http.workspace = true
 twilight-model.workspace = true
-twilight-util.workspace = true
+twilight-util = { workspace = true, features = ["builder"] }
