--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ twilight-gateway = "0.16.0-rc.1"
 twilight-http = "0.16.0-rc.1"
 twilight-model = "0.16.0-rc.1"
 twilight-util = "0.16.0-rc.1"
+twilight-validate = "0.16.0-rc.1"
 
 [patch.crates-io]
 figment = { git = "https://github.com/CodingAnarchy/Figment", rev = "e1e7bc7" }
