--- a/bouncer-framework/Cargo.toml
+++ b/bouncer-framework/Cargo.toml
@@ -19,3 +19,4 @@ twilight-gateway.workspace = true
 twilight-http.workspace = true
 twilight-model.workspace = true
 twilight-util = { workspace = true, features = ["builder"] }
+twilight-validate.workspace = true
