--- a/bouncer-macros/Cargo.toml
+++ b/bouncer-macros/Cargo.toml
@@ -13,5 +13,5 @@ proc-macro = true
 itertools = "0.13.0"
 proc-macro2 = "1.0.92"
 syn = { version = "2.0.93", features = ["parsing"] }
-twilight-validate = "0.16.0-rc.1"
 quote = "1.0.38"
+twilight-validate.workspace = true
