--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,11 @@ rust-version = "1.85.0"
 [profile.release]
 lto = "thin"
 
+[workspace.lints.clippy]
+nursery = "warn"
+unused_trait_names = "warn"
+std_instead_of_core = "warn"
+
 [workspace.dependencies]
 anyhow = "1.0.95"
 async-trait = "0.1.83"
