--- a/bouncer-cli/Cargo.toml
+++ b/bouncer-cli/Cargo.toml
@@ -6,6 +6,9 @@ publish.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 clap = { version = "4.5.23", features = ["derive"] }
 thiserror.workspace = true
