--- a/bouncer-config/Cargo.toml
+++ b/bouncer-config/Cargo.toml
@@ -6,6 +6,9 @@ publish.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 anyhow.workspace = true
 figment = { version = "0.10.19", features = ["env", "yaml"] }
