--- a/bouncer-framework/Cargo.toml
+++ b/bouncer-framework/Cargo.toml
@@ -6,6 +6,9 @@ publish.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 anyhow.workspace = true
 async-trait.workspace = true
