--- a/bouncer-macros/Cargo.toml
+++ b/bouncer-macros/Cargo.toml
@@ -6,6 +6,9 @@ publish.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 
+[lints]
+workspace = true
+
 [lib]
 proc-macro = true
 
