--- a/bouncer/Cargo.toml
+++ b/bouncer/Cargo.toml
@@ -6,6 +6,9 @@ publish.workspace = true
 edition.workspace = true
 rust-version.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 bouncer-config = { path = "../bouncer-config" }
 bouncer-cli = { path = "../bouncer-cli" }
