--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,19 +24,19 @@ unused_trait_names = "warn"
 std_instead_of_core = "warn"
 
 [workspace.dependencies]
-anyhow = "1.0.95"
-async-trait = "0.1.85"
-secrecy = { version = "0.10.3" }
-thiserror = "2.0.10"
+anyhow = "1.0.97"
+async-trait = "0.1.87"
+secrecy = "0.10.3"
+thiserror = "2.0.12"
 tokio = "1.43.0"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
-twilight-cache-inmemory = "0.16.0-rc.1"
-twilight-gateway = "0.16.0-rc.1"
-twilight-http = "0.16.0-rc.1"
-twilight-model = "0.16.0-rc.1"
-twilight-util = "0.16.0-rc.1"
-twilight-validate = "0.16.0-rc.1"
+twilight-cache-inmemory = "0.16.0"
+twilight-gateway = "0.16.0"
+twilight-http = "0.16.0"
+twilight-model = "0.16.0"
+twilight-util = "0.16.0"
+twilight-validate = "0.16.0"
 
 [patch.crates-io]
 figment = { git = "https://github.com/CodingAnarchy/Figment", rev = "e1e7bc7" }
